# coxeter

./: Cargo.toml  README.md
examples/: demo.rs
src/: coxeter.rs  group.rs  lib.rs  matrix.rs  polytope.rs  shape.rs  util.rs  vector.rs
