[package]
name = "symmetries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
num-traits = "0.2.15"
smallvec = { version = "1.9.0", features = ["union"] }

[dev-dependencies]
cgmath = { version = "0.18.0", features = ["serde"] }
eframe = { version = "0.18.0", features = ["dark-light", "persistence"] }
serde = { version = "1.0", features = ["derive"] }
